# metronome

./: README.md  meson.build
data/: metronome.desktop  metronome.metainfo.xml
po/: POTFILES
src/: Application.vala
